[#188] feat : 이메일 인증 로직 추가